2007-04-21 Peter Brett <peter@peter-b.co.uk>

	* lib/system-gschemrc.in: Change keystrokes for grid size change
	shortcuts.

	Incrementing/decrementing the grid size is something that users
	are likely to do several times in quick succession.  As such, it
	the keystroke should be a single key. This sets
	increment/decrement to ']' and '[' respectively.
	
2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>

	* src/g_keys.c, src/x_print.c: Check return value of gdk_keyval_name() is
	  non NULL before attempting to match against it. Fixes bug #1692634.

	* configure.ac.in: Added explicit test for locale.h

	* src/i_callbacks.c: Make test for revert page question more
	  succinct, testing for the absence of the "YES" response, rather
	  than for the various ways the user might cancel the dialog.

	* src/o_arc.c: Fix for drawing a dotted arc / circle with
	  angular dot spacing too small to render. Was a sign error
	  in the alternative codepath for drawing these cases.

2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

       * configure.ac.in, scripts/Makefile.am, scripts/config.sh.in,
	 scripts/gschemdoc.sh:

	 Applied patch by Peter Brett. Moved gschemdoc from
	 utils/scripts to gschem/scripts.
	
       * lib/system-gschemrc.in: Use PgUp & PgDn to change pages in gschem.

	 Applied patch from Peter Brett. Thanks!

	 Not only is it more intuitive to use the page keys to swap
	 between pages, but the current bindings ('<' & '>') don't
	 work on German keyboards.
	
       * src/x_fileselect.c:
	 Make "Save" the default response in the save page dialog.
	 FR #1704919. Thanks to rikster for reporting this FR.
	
       * src/x_dialog.c:
	 Make "Save changes" the default response in the close page
	 confirmation dialog.

       * src/o_picture.c, src/x_attribedit.c, src/x_autonumber.c,
	 src/x_compselect.c, src/x_dialog.c, src/x_fileselect.c,
	 src/x_image.c, src/x_log.c, src/x_multiattrib.c,
	 src/x_pagesel.c, src/x_print.c, src/x_script.c,
	 src/i_callbacks.c:
